apps/ovenmediaengine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovenmediaengine
  namespace: ovenmediaengine
  labels:
    app: ovenmediaengine
spec:
  type: ClusterIP
  selector:
    app: ovenmediaengine
  ports:
    - name: signalling
      port: 3333
      targetPort: 3333
      protocol: TCP
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
